<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 标题栏 -->
    <string name="title_myhome">个人中心</string>
    <string name="title_home">首页</string>
    <string name="title_back">返回</string>
    <string name="title_classify">分类</string>
    <string name="title_business">活动</string>
    <string name="title_shopcar">购物车</string>
	<!-- 主界面 -->
    <string name="app_name">兔购</string>
    <string name="action_settings">收藏</string>
    <string name="action_fenxiang">分享</string>
    <string name="tv_allorders">我的订单</string>
    <string name="tv_baobeishoucang">我的收藏</string>
    <string name="tv_addressadministration">地址管理</string>
    <string name="tv_kefu">客服中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_first">首页</string>
    <string name="tv_second">分类</string>
    <string name="tv_third">活动</string>
    <string name="tv_fourth">购物车</string>
    
    <!-- 个人中心 -->
    <string name="tv_myhome">个人中心</string>
    <string name="tv_daifukuan">待付款</string>
    <string name="tv_baobeishoucang">宝贝收藏</string>
   <string name="tv_waitinggoods">待收货</string>
    <string name="tv_allorders">全部订单</string>
    <string name="tv_addressadministration">地址管理</string>
    <string name="tv_callcenter">客服中心</string>
    <string name="tv_browinghistory">浏览记录</string>
    <string name="tv_close">退出登录</string>
    <string name="feedback">意见反馈</string>
    <string name="commitinfo">提交反馈</string>
    
    <!-- 用户注册 -->
<string name="menu_settings">Settings</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_shopping_cart_helper">ShoppingCartHelperActivity</string>
    <string name="productdescription">Product Description</string>
    <string name="title_activity_login">Login</string>
    <string name="enterProd">Enter Product</string>
    <string name="enterPrice">Enter Price</string>
    <string name="enterDesc">Enter Description</string>
    <string name="insert">Insert</string>

    <color name="black">#000000</color>
    <color name="green">#13ff00</color>
    <color name="red">#ff0000</color>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="email">" Email"</string>
    <string name="login">Log in</string>
    <string name="or">Or</string>
    <string name="register">Register Here</string>
    <string name="title_activity_register">Register</string>
    <string name="Fname">用户名</string>
    <string name="first">请输入用户名</string>
    <string name="Lname">密码</string>
    <string name="lastname">请输入密码</string>
    <string name="registerEmail">Email</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterAdress">Enter Address</string>
    <string name="submit">Submit</string>
    <string name="password01">密码找回问题</string>
    <string name="pass01">请输入密码找回问题</string>
    <string name="title_activity_register_">Register</string>
    <string name="sign">返回</string>
    <string name="newmima">新密码</string>
    <string name="address">密码找回</string>
    <string name="addre">请输入密码找回答案</string>
    <string name="enteraddress">请输入密码找回答案</string>
    <string name="putnewmima">请输入新密码</string>
    <string name="gologin">注册</string>
    <string name="doit">完成</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="productcatalog">Product Catalog</string>
    <string name="viewshoppingcart">View Shopping Cart</string>
    <string name="pizzatitle">Pizza Title</string>
    <string name="logout">Log out</string>
    <string name="producttotal">Total Price:</string>
    <string name="pizzaprice">Pizza Price</string>
    <string name="pizzades">Pizza Description</string>
    <string name="currentcart">Current in cart</string>
    <string name="pizzaname">Pizza Name</string>
    <string name="quantity">Quantity</string>
    <string name="setquantity">Set Quantity</string>
    

    <!-- 标题栏 -->
    <string name="tv_title">标题栏</string>
    
    <!-- 登录界面 -->
    <string name="tv_login_name">账号</string>
    <string name="tv_login_password">密码</string>
    <string name="tv_login_name_hide">请输入账号</string>
    <string name="tv_login_password_hide">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_calloff">取消</string>
    <string name="tv_login_register">注册</string>
    <string name="tv_login_forget">找回密码</string>
    
    <!-- 首页 -->
    <string name="tv_HOMEFragment_buymore">销量最多:</string>
    <string name="tv_HOMEFragment_good">好评最多:</string>
    <string name="tv_HOMEFragment_more">更多</string>
    
    <!-- 活动 -->
    <string name="tv_minprice">最低价</string>
    <string name="tv_free_delivery">包邮</string>
    <string name="tv_sales_promotion">限时促销</string>
    <string name="tv_btn_more">更多</string>
    <string name="tv_payment">￥20 </string>
    
    <!-- 购物车 -->
    <string name ="shopcat_name">购物车</string>
    
    <!-- 商品展示页面 -->
    <string name="tv_oneshop_shopname">商品名称：</string>
    <string name="tv_oneshop_money">商品价格：</string>
    <string name="tv_oneshop_money_one">商品单价：</string>
    <string name="tv_oneshop_type">商品类型：</string>
    <string name="tv_oneshop_address">商品所在地：</string>
    <string name="tv_oneshop_description">商品描述：</string>
    
    
     <!-- 分类-->
       <string name ="classify_cloth">服装搭配</string>
       <string name ="classify_dayuse">日用百货</string>
       <string name ="classify_phone">手机数码</string>
       <string name ="classify_jiaju">家纺家具</string>
       <string name ="classify_lingshi">美味零食</string>
  
       <string name="tv_arrive_address">配送地址:</string>
       <string name="tv_arrive_kuaidi">配送方式:</string>
       <string name="tv_arrive_phone">手机号码:</string>
       <string name="tv_shop_buyquantity">购买数量</string>
       
</resources>
