<?xml version="1.0" encoding="utf-8"?>

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_bg_hdpi"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/Fname"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/putyonghuming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/self_center"
        android:hint="@string/first"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mimazhaohuiwenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/password01"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/putmimawenti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/self_center"
        android:hint="@string/pass01"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/mimazhaohuidaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/address"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/putnewmima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/self_center"
        android:hint="@string/putnewmima"
        android:inputType="text" >

    </EditText>

    <TextView
        android:id="@+id/newmima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/newmima"
        android:textSize="17dp" 
        />

    <EditText
        android:id="@+id/putmimadaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="30dp"
        android:background="@drawable/self_center"
        android:hint="@string/enteraddress"
        android:inputType="text" />

    <Button
        android:id="@+id/wanchengxiugai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/doit" />

</LinearLayout>
