<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/default_bg_hdpi"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"  
        android:paddingBottom="5dp"   
        android:paddingLeft="15dp"
        android:text="@string/Fname"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="@drawable/self_center"
        android:hint="@string/first"
        android:maxLength="15"
        android:inputType="textPersonName"
         android:layout_margin="10dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   
        android:text="@string/Lname"
         android:paddingTop="10dp"  
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:textSize="17dp"
         />

    <EditText
        android:id="@+id/Last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/self_center"
        android:hint="@string/lastname"
        android:maxLength="15"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:paddingTop="10dp"  
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:textSize="17dp"
       />

    <EditText
        android:id="@+id/pass01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/self_center"
        android:hint="@string/pass01"
        android:maxLength="40"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Addre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/self_center"
        android:hint="@string/enteraddress"
        android:maxLength="40"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/gobacklogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:gravity="center"
            android:text="@string/gologin" />

        <Button
            android:id="@+id/sign"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.36"
            android:text="@string/sign" />

    </LinearLayout>

    </LinearLayout>
