<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg_hdpi"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/login_layout_layout"
        android:orientation="vertical" >
		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tv_login_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tv_login_name_hide"
            android:ems="10" >

            <requestFocus android:layout_width="wrap_content" />

        </EditText>
		</LinearLayout>
		
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/login_line" />
        
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tv_login_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tv_login_password_hide"
            android:inputType="textPassword"
            android:ems="10" >

        </EditText>
		</LinearLayout>
    </LinearLayout>
	<LinearLayout 
	 	 android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/btn_login"
		android:layout_weight="1"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_calloff"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/btn_calloff" />
    </LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_login_register" />

    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:text="@string/tv_login_forget" />
	</RelativeLayout>


</LinearLayout>
