<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_oneshop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/a" />

    <TextView
        android:id="@+id/tv_oneshop_shopname"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/one_layout_l"
        android:singleLine="false"
        android:text="@string/tv_oneshop_shopname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/one_layout_l"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/rmb" />

        <TextView
            android:id="@+id/tv_oneshop_money"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_oneshop_money"
            android:textColor="#FF0000" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_oneshop_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/one_layout_l"
        android:text="@string/tv_oneshop_type" />

    <TextView
        android:id="@+id/tv_oneshop_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/one_layout_l"
        android:gravity="right"
        android:text="@string/tv_oneshop_address"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_oneshop_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="0.47"
        android:background="@drawable/one_layout_l"
        android:paddingBottom="0dp"
        android:text="@string/tv_oneshop_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_addshopcar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="加入购物车" />

        <Button
            android:id="@+id/btn_immediately_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="立即购买" />
    </LinearLayout>

</LinearLayout>