<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_oneshop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:singleLine="false"
                android:text="@string/tv_oneshop_shopname" />

            <TextView
                android:id="@+id/tv_oneshop_shopname"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:singleLine="false"
                 />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="36dp" 
                 android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:singleLine="false"/>
            
            <TextView
                android:id="@+id/tv_oneshop_shopactivity"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:singleLine="false"
                />
            
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/one_layout_l"
            android:orientation="horizontal" >
	
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_oneshop_money_one"
                />
             
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/rmb" />

            <TextView
                android:id="@+id/tv_oneshop_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FF0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="元"
                android:textColor="#FF0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/tv_oneshop_type" />

            <TextView
                android:id="@+id/tv_oneshop_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/one_layout_l"
                android:gravity="right"
                android:text="@string/tv_oneshop_address"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_oneshop_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/one_layout_l"
                android:gravity="right"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="0.47"
            android:paddingBottom="0dp"
            android:text="@string/tv_oneshop_description" />

        <TextView
            android:id="@+id/tv_oneshop_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="0.47"
            android:paddingBottom="0dp"
            android:text="@string/tv_oneshop_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            >

            <Button
                android:id="@+id/btn_addshopcar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_one_layout"
                android:layout_margin="5dp"
                android:text="加入购物车" />

            <Button
                android:id="@+id/btn_immediately_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_one_layout"
                android:text="立即购买" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>