<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            
            android:orientation="vertical"
           >

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tv_baobeishoucang"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/self_center"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/tv_baobeishoucang"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:src="@drawable/turnright_tubiao" />
 
                         </FrameLayout>
               
                        <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tv_allorders"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/self_center"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/tv_allorders"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />
 
                         <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:src="@drawable/turnright_tubiao" />
                         </FrameLayout>
                 

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
 
                        <TextView
                            android:id="@+id/tv_addressadministration"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/self_center"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/tv_addressadministration"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />
                    
                         <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:src="@drawable/turnright_tubiao" />
                         </FrameLayout>
                 

                      <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                         <TextView
                             android:id="@+id/tv_callcenter"
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent"
                             android:background="@drawable/self_center"
                             android:drawablePadding="10.0dip"
                             android:gravity="center_vertical"
                             android:includeFontPadding="false"
                             android:paddingLeft="17.0dip"
                             android:text="@string/tv_callcenter"
                             android:textColor="#ff333333"
                             android:textSize="16.0sp" />
                       
                   <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:src="@drawable/turnright_tubiao" />
                         </FrameLayout>

                   
                       
                      <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
 
                        <TextView
                            android:id="@+id/tv_close"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/self_center"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/tv_close"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />
       
                         </FrameLayout>
                       
               
             
   
       </LinearLayout>
 </ScrollView>